# Discord-Maths-Bot

./: .breakpoints  .clang-format  .gitignore  .replit  909419342200995840  909419532857270293  Cargo.toml  README.md  build.sh  cprimes.py  cpython_primes.rs  discord.log.1  exp.rb  fontlist-v330.json  keep_alive.py  main.c  main.py  primes  primes.c  primes.js  primes.php  primes.py  primes.r  primes.rb  pyproject.toml  serverVars  serverVars.json  setup.py  shush  userVars  userVars.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml
C/: primes  primes.c
C#/: primes.cs
C++/: primes  primes.cc
C♯/: build.sh
Dart/: primes  primes.dart
Go/: primes  primes.go
Java/: primes.java
Kotlin/: primes.kt
Rust/: primes  primes.rs
Swift/: primes.swift
disuniter/: MANIFEST.in  README.md  setup.cfg
disuniter/src/dis_uniter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
disuniter/src/disuniter/: __init__.py
maths_stuff/: Cargo.toml  pyproject.toml
maths_stuff/src/: lib.rs
src/: lib.rs
