[tool.black]
experimental-string-processing = true
line-length = 83
[tool.poetry]
authors = ["Umar Sharief"]
description = "A discord maths bot with functions for quadratic equations, primes, nth powers (e.g. squares, cubes), volume and a calculator."
name = "Umar's Discord Maths Bot"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.1"
black = "^21.12b0"
discord-variables-plugin = "^1.2"
python = "^3.8"
py-cord = "^2.0.0b1"
numpy = "^1.22.2"
