[tool]
[tool.black]
preview = true
[tool.poetry]
authors = ["Umar Sharief"]
description = "A discord maths bot with functions for quadratic equations, primes, nth powers (e.g. squares, cubes), volume and a calculator."
name = "Umar's Discord Maths Bot"
version = "0.1.0"
[tool.poetry.dependencies]
black = "*"
discord-variables-plugin = "*"
matplotlib = "*"
py-cord = ">=2.0.0b1"
python = "^3.8"
maturin = "*"