[metadata]
name = dis-uniter
version = 0.1.3
author = Umar Sharief
author_email = umar.sharief04@gmail.com
description = A keep-alive server for discord.py on replit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/noneofyourbusiness1415252/Discord-Maths-Bot/blob/main/disuniter.py
project_urls =
    Bug Tracker = https://github.com/noneofyourbusiness1415252/Discord-Maths-Bot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src